dropdown menu in mobile, fixed image distortion

--- a/easybank-landing-page-master.scss
+++ b/easybank-landing-page-master.scss
@@ -11,6 +11,7 @@ $colors: (
    White: hsl(0, 0%, 100%),
    Light Lime Green: hsl(136,78%,55%),
    Light Bright Cyan: hsl(192, 80%, 55%),
+   Overlay: hsla(8, 24%, 2%, 0.5),
 );
 
 $fallback-colors: (
@@ -63,12 +64,18 @@ body {
     display:block;
 }
 
-
+.overlay{
+  opacity:0.5;
+  background-color: map-get($colors,Overlay);
+}
 .top-z-index{
   //needed for z-index.
   position: relative;
   z-index: 1;
   opacity:1;
+}
+.z-index-99{
+   z-index:99;
 }
 
 .outer-grid{
@@ -77,13 +84,15 @@ body {
     grid-template-rows: auto;
     align-items: center;
     justify-items: center;
-  
+    word-wrap: break-word;
   @media screen and(min-width:768px){
       grid-auto-flow: row;
-      grid-template-columns: repeat(4, minmax(0, 1fr));
-      word-wrap: break-word;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
       align-items: start;
       column-gap: 15px;
+  }
+  @media screen and(min-width:992px){
+      grid-template-columns: repeat(4,minmax(0,1fr));
   }
 }
 .outer-2-column-grid{
@@ -112,15 +121,42 @@ body {
 .gradient-green-blue{
    background-image: linear-gradient(to right,map-get($colors,Lime Green),map-get($colors,Bright Cyan));
 }
-button:hover{
+button:hover:not(#menubutton){
   background-image: linear-gradient(to right,map-get($colors,Light Lime Green),map-get($colors,Light Bright Cyan));
 }
 
     header{
-      @include padding(2em);
+      //position:relative;
+      @include padding(0 2em);
       #desktop-button{
         display:none;
       }
+      nav{
+        position:relative;
+        @include bg-color(map-get($colors,White),nth($fallback-colors,5));
+        #navbarCollapse{
+          position:absolute;
+          margin-top:50px;
+          top:100%;
+          ul {
+            position:relative;
+            width: 30em;
+            margin-left:3em;
+            @include bg-color(map-get($colors,White),nth($fallback-colors,5));
+            @include font-color(map-get($colors,Black),nth($fallback-colors,6));
+            @media screen and(min-width:768px){
+               width:auto;
+               margin-left:0;
+            }
+          }
+          @media screen and(min-width:768px){
+            position:relative;
+            margin-top:0;
+            top:0;
+          }
+        }
+      }
+      
       @media screen and(min-width:768px){
           .navbar-nav li a{
             @include font-color(darken(map-get($colors,Light Grayish Blue),27),nth($fallback-colors,5));
@@ -138,8 +174,7 @@ button:hover{
       }
     }
     .outer{
-         
-        
+        position:relative;
         @include padding(2em);
         &__first{
             .mobile{ 
@@ -147,27 +182,20 @@ button:hover{
             }
             .desktop{display:none;}
             
-            #first-text{
-                @media screen and(min-width:768px){
-                  position:relative;
-                 
-                }
-            }
             .svg-container{
               position:relative;
-              //padding-top: 48%;
             }
             .pos-absolute{
                position:absolute;
             }
             .moveup{
-              bottom:5em;
+              bottom:10.8em;
               @media screen and(min-width:1600px){
                    bottom: 8em;
               }
             }
             .movedown{
-              top:4em;
+              bottom:5em;
               @media screen and(min-width:1600px){
                    top: 6em;
               }
@@ -202,9 +230,9 @@ button:hover{
                 place-self: start;
             }
             img {
-              //aspect-ratio: 1.5 / 1;
               width:600px;
               height:400px;
+              object-fit: cover;
             }
             @media screen and(min-width:768px){
               position:relative;
